--- a/OpenMenuEditorWPF/MainView.xaml
+++ b/OpenMenuEditorWPF/MainView.xaml
@@ -5,19 +5,19 @@
         Title="Fringhaus Menu-Editor"
         Height="550"
         Width="800"
-        x:Name="uc">
+        x:Name="uc" Closed="uc_Closed">
     <Window.Resources>
         <Style TargetType="{x:Type CheckBox}">
             <Setter Property="Margin"
-                    Value="5" />
+                    Value="2 0" />
         </Style>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Margin"
-                    Value="5" />
+                    Value="0 0 2 0" />
         </Style>
         <Style TargetType="{x:Type TextBox}">
             <Setter Property="Margin"
-                    Value="5" />
+                    Value="2 2 0 0" />
         </Style>
 
         <HierarchicalDataTemplate DataType="{x:Type OpenMenu:MenuGroup}"
@@ -43,7 +43,7 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="0"
                              VerticalAlignment="Center"
-                             Text="{Binding Name}" />
+                             Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
 
                     <TextBlock Grid.Column="0"
                                Grid.Row="1"
@@ -51,7 +51,7 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="1"
                              VerticalAlignment="Center"
-                             Text="{Binding Description}" />
+                             Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </Border>
         </HierarchicalDataTemplate>
@@ -79,7 +79,7 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="0"
                              VerticalAlignment="Center"
-                             Text="{Binding Name}" />
+                             Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
 
                     <TextBlock Grid.Column="0"
                                Grid.Row="1"
@@ -87,28 +87,28 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="1"
                              VerticalAlignment="Center"
-                             Text="{Binding Description}" />
+                             Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
                     <TextBlock Grid.Column="0"
                                Grid.Row="2"
                                VerticalAlignment="Center">Preis:</TextBlock>
                     <TextBox Grid.Column="1"
                              Grid.Row="2"
                              VerticalAlignment="Center"
-                             Text="{Binding Price}" />
+                             Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
                     <StackPanel Grid.Column="0"
                                 Grid.Row="3"
                                 Grid.ColumnSpan="2"
                                 Orientation="Horizontal">
                         <CheckBox VerticalAlignment="Center"
-                                  IsChecked="{Binding Disabled}">
+                                  IsChecked="{Binding Disabled, UpdateSourceTrigger=PropertyChanged}">
                             Verbergen
                         </CheckBox>
                         <CheckBox VerticalAlignment="Center"
-                                  IsChecked="{Binding Vegetarian}">
+                                  IsChecked="{Binding Vegetarian, UpdateSourceTrigger=PropertyChanged}">
                             Vegetarisch
                         </CheckBox>
                         <CheckBox VerticalAlignment="Center"
-                                  IsChecked="{Binding Special}">
+                                  IsChecked="{Binding Special, UpdateSourceTrigger=PropertyChanged}">
                             Spezial
                         </CheckBox>
                     </StackPanel>
@@ -122,7 +122,7 @@
             </TreeView>
         </DataTemplate>
         <DataTemplate x:Key="tabHeader">
-            <TextBox Text="{Binding Name}" />
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
         </DataTemplate>
 
     </Window.Resources>
