--- a/OpenMenuEditorWPF/MainView.xaml
+++ b/OpenMenuEditorWPF/MainView.xaml
@@ -27,11 +27,13 @@
                     CornerRadius="3"
                     Padding="3"
                     Margin="3"
-                    Width="400">
+                    Width="600">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"></RowDefinition>
@@ -45,11 +47,11 @@
                              VerticalAlignment="Center"
                              Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <TextBlock Grid.Column="0"
-                               Grid.Row="1"
+                    <TextBlock Grid.Column="2"
+                               Grid.Row="0"
                                VerticalAlignment="Center">Beschreibung:</TextBlock>
-                    <TextBox Grid.Column="1"
-                             Grid.Row="1"
+                    <TextBox Grid.Column="3"
+                             Grid.Row="0"
                              VerticalAlignment="Center"
                              Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
