minor update teststuff

--- a/OpenMenuSetup/Product.wxs
+++ b/OpenMenuSetup/Product.wxs
@@ -2,9 +2,9 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
 
   <Product Id="*" 
-           Name="Fringshaus Menu Editor (beta)" 
+           Name="Fringshaus Menu Editor v2.1" 
            Language="1033" 
-           Version="1.0.5.0" 
+           Version="2.1.0.0" 
            Manufacturer="dotob" 
            UpgradeCode="8322f190-3c1f-40e1-a661-71719b203802">
     <Package InstallerVersion="200" 
@@ -15,8 +15,8 @@
     <Property Id="PREVIOUSVERSIONSINSTALLED" Secure="yes" />
     <Upgrade Id='8322f190-3c1f-40e1-a661-71719b203802'>
       <UpgradeVersion OnlyDetect='no' Property='PREVIOUSVERSIONSINSTALLED'
-        Minimum='1.0.3.0' IncludeMinimum='yes'
-        Maximum='99.0.4.0' IncludeMaximum='no' />
+        Minimum='1.0.0.0' IncludeMinimum='yes'
+        Maximum='99.0.0.0' IncludeMaximum='no' />
     </Upgrade>
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
