splashimage textbox style

--- a/OpenMenuEditorWPF/MainView.xaml
+++ b/OpenMenuEditorWPF/MainView.xaml
@@ -20,6 +20,49 @@
     <Style TargetType="{x:Type TextBox}">
       <Setter Property="Margin"
               Value="2 2 0 0" />
+
+      <Setter Property="SnapsToDevicePixels"
+              Value="True" />
+      <Setter Property="OverridesDefaultStyle"
+              Value="True" />
+      <Setter Property="KeyboardNavigation.TabNavigation"
+              Value="None" />
+      <Setter Property="FocusVisualStyle"
+              Value="{x:Null}" />
+      <Setter Property="MinWidth"
+              Value="120" />
+      <Setter Property="MinHeight"
+              Value="20" />
+      <Setter Property="AllowDrop"
+              Value="true" />
+      <Setter Property="Template">
+        <Setter.Value>
+          <ControlTemplate TargetType="{x:Type TextBoxBase}">
+            <Border Name="Border"
+                    CornerRadius="2"
+                    Padding="2"
+                    Background="#FFFFFF"
+                    BorderBrush="#888888"
+                    BorderThickness="1">
+              <ScrollViewer Margin="0"
+                            x:Name="PART_ContentHost" />
+            </Border>
+            <ControlTemplate.Triggers>
+              <Trigger Property="IsEnabled"
+                       Value="False">
+                <Setter TargetName="Border"
+                        Property="Background"
+                        Value="#EEEEEE" />
+                <Setter TargetName="Border"
+                        Property="BorderBrush"
+                        Value="#EEEEEE" />
+                <Setter Property="Foreground"
+                        Value="#888888" />
+              </Trigger>
+            </ControlTemplate.Triggers>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
     </Style>
 
     <Style x:Key="vbVegetarian"
@@ -48,7 +91,7 @@
         </Trigger>
       </Style.Triggers>
     </Style>
-    
+
     <Style x:Key="vbSpecial"
            TargetType="{x:Type CheckBox}">
       <Setter Property="OverridesDefaultStyle"
@@ -74,8 +117,8 @@
 
         </Trigger>
       </Style.Triggers>
-    </Style>    
-    
+    </Style>
+
     <Style x:Key="vbVisible"
            TargetType="{x:Type CheckBox}">
       <Setter Property="OverridesDefaultStyle"
@@ -206,7 +249,8 @@
     </DataTemplate>
 
     <DataTemplate x:Key="tabContent">
-      <TreeView x:Name="tree" ItemsSource="{Binding Groups}"
+      <TreeView x:Name="tree"
+                ItemsSource="{Binding Groups}"
                 SelectedItemChanged="TreeView_SelectedItemChanged">
       </TreeView>
     </DataTemplate>
