mucho mucho donno
- create html

--- a/OpenMenuEditorWPF/MainView.xaml
+++ b/OpenMenuEditorWPF/MainView.xaml
@@ -4,7 +4,7 @@
         xmlns:OpenMenu="clr-namespace:OpenMenuEditor.OpenMenu"
         Height="550"
         Width="800"
-        Title="{Binding Path=Version,ElementName=uc, StringFormat=Fringshaus Menu-Editor v.{0}}"
+        Title="{Binding Path=Version, ElementName=uc, StringFormat=Fringshaus Menu-Editor v.{0}}"
         x:Name="uc"
         Closed="uc_Closed"
         Loaded="uc_Loaded">
@@ -35,6 +35,8 @@
               Value="20" />
       <Setter Property="AllowDrop"
               Value="true" />
+      <Setter Property="Foreground"
+              Value="Black" />
       <Setter Property="Template">
         <Setter.Value>
           <ControlTemplate TargetType="{x:Type TextBoxBase}">
